Adding images and info

--- a/editor_blueprint.html
+++ b/editor_blueprint.html
@@ -417,7 +417,6 @@
         }
     </style>
 
-
     <div id="stage-container">
         <svg xmlns="http://www.w3.org/2000/svg" id="dragoDrawArea" width="1000" height="1000" viewBox="0 0 1000 1000"
             preserveAspectRatio="xMinYMin meet">
@@ -534,6 +533,19 @@
     <script type="text/javascript" src="src/DragoConvoComponents.js"></script>
     <script type="text/javascript" src="src/DragoPlayerComponents.js"></script>
     <script type="text/javascript" src="src/DragoCoreSubcomponents.js"></script>
+
+    <style type="text/css">
+        #githublink {
+            z-index: 99999;
+            position:absolute;
+            bottom: 5px;
+            right: 25px;
+            cursor: pointer;
+        }
+    </style>
+    <div id="githublink">
+        <img onClick="document.location.href='https://github.com/aJamDonut/Drago'" src="docs/img/GitHub-Mark-Light-64px.png" title="Checkout Github" />
+    </div>
 </body>
 
 </html>
