im tired so better push

--- a/editor_blueprint.html
+++ b/editor_blueprint.html
@@ -220,7 +220,7 @@
 
 
 
-        .Drago__String input {
+        .Drago__String input, .Drago__Int input {
             background: none;
             border-radius: 5px;
             border: 1px solid #80808075;
